tests/errors/syn_method17.java
public class syn_method17 {
public static int main ( ) 
}
}